# FreshServiceLibrary

./: .gitignore  README.md  devenv.nix  devenv.yaml  env.sample  fresh_ticket_templates.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
source/FreshService/: Client.py  Config.py
