[metadata]
name = FreshService API Client
description = Client library for communicating with FreshService
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.13

[options]
packages = 
    FreshService

install_requires = 
    pydantic
    pydantic-settings
    typing
    markdown
    bs4
    requests
zip_safe = no
python_requires = >= 3.13
package_dir =
    =source

[options.packages.find]
where=source

[options.extras_require]
testing = 
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
freshservice = py.typed

[flake8]
max-line-length = 160
